Fixed a margin to repair header bug on smaller devices

--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ body
 	text-align: center;
 	background-size: cover !important;
 	background-position: center center !important;
+	margin-top: 10px;
 }
 .innertopic
 {
